--- a/manifests/deployment.yaml
+++ b/manifests/deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: llmops-app
-        image: rajaramesh7410/studybuddy:v4
+        image: rajaramesh7410/studybuddy:__IMAGE_TAG__
         ports:
         - containerPort: 8501
         env:
