--- a/manifests/deployment.yaml
+++ b/manifests/deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: llmops-app
-        image: rajaramesh7410/studybuddy:__IMAGE_TAG__
+        image: rajaramesh7410/studybuddy:new_latest
         ports:
         - containerPort: 8501
         env:
